add group , fix bugs

--- a/src/components/Groups/Group/Group.module.css
+++ b/src/components/Groups/Group/Group.module.css
@@ -20,6 +20,7 @@
 }
 
 .singleGroupMain .singleGroupWrapper > .initials {
+    text-transform: uppercase;
     background-color: var(--bg-initials);
     width: 68.9px;
     height: 68.9px;
