--- a/src/components/MyNotes/MyNotes.module.css
+++ b/src/components/MyNotes/MyNotes.module.css
@@ -74,7 +74,7 @@
     width: 100%;
     padding: var(--spacing-md) var(--spacing-lg)  0px var(--spacing-lg) ;
 
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 ::-webkit-scrollbar {
