--- a/src/components/MyNotes/MyNotes.module.css
+++ b/src/components/MyNotes/MyNotes.module.css
@@ -40,6 +40,12 @@
     align-items: center;
 }
 
+.MyNotesMain .MyNotesWrapper .MyNotesHeader .MyNotesHeader_Body > .back {
+    display: none;
+    margin: 0px var(--spacing-md) 0px 0px;
+    cursor: pointer;
+}
+
 .MyNotesMain .MyNotesWrapper .MyNotesHeader .MyNotesHeader_Body .grpInitials {
     text-transform: uppercase;
     width:68.8px;
@@ -159,4 +165,83 @@
     right: calc(var(--spacing-md) * 2);
     cursor: pointer;
     fill: red
+}
+
+
+@media screen and (max-width: 1000px) { 
+    .MyNotesMain .MyNotesWrapper .MyNotesHeader_Footer > textarea::placeholder {
+        font-size: 20px;
+    }
+
+    .MyNotesMain .MyNotesWrapper .MyNotesHeader_Footer > textarea {
+        font-size: 20px;
+        min-height: 170px;
+    }
+}
+
+@media screen and (max-width: 970px) {
+
+    .MyNotesMain .MyNotesWrapper .MyNotesArea{
+        padding: var(--spacing-md) var(--spacing-lg)  200px var(--spacing-lg) ;
+    
+        /* border: 2px solid red; */
+    }
+
+    ::-webkit-scrollbar-track {
+        background: var(--bg-scrollbarArea-2);
+        border-radius: 5.5px;
+        margin-bottom: 220px;
+    }
+}
+
+@media screen and (max-width: 800px) {
+
+    .MyNotesMain .MyNotesWrapper .MyNotesHeader .MyNotesHeader_Body .grpInitials {
+        width: 48px;
+        height: 48px;
+
+        font-size: 16.8px;
+    }
+
+    .MyNotesMain .MyNotesWrapper .MyNotesHeader .MyNotesHeader_Body .grpName {
+        font-size: 16.72px;
+    }
+
+
+    .MyNotesMain .MyNotesWrapper .MyNotesHeader_Footer > textarea {
+        min-height: 170px;
+    }
+}
+
+
+
+
+@media screen and (max-width: 600px) {
+    .MyNotesMain {
+        display: none;
+    }
+
+    .MyNotesMain .MyNotesWrapper .MyNotesHeader .MyNotesHeader_Body > .back {
+        display: block;
+    }
+
+    .MyNotesMain .MyNotesWrapper .MyNotesHeader_Footer > textarea {
+        min-height: 130px;
+        font-size: 17.71px;
+    }
+
+    .MyNotesMain .MyNotesWrapper .MyNotesHeader_Footer > textarea::placeholder {
+        font-size: 17.71px;
+        letter-spacing: 1px;
+    }
+
+    .MyNotesMain .MyNotesWrapper .MyNotesArea{
+        padding: var(--spacing-sm) var(--spacing-md)  166px var(--spacing-md) ;
+    }
+
+    ::-webkit-scrollbar-track {
+        background: var(--bg-scrollbarArea-2);
+        border-radius: 5.5px;
+        margin-bottom: 166px;
+    }
 }
