--- a/src/components/Welcome/Welcome.module.css
+++ b/src/components/Welcome/Welcome.module.css
@@ -83,3 +83,44 @@
 .WelcomeMain .encryption > span {
     padding: 6px 0px 0px var(--spacing-sm);
 }
+
+
+
+@media screen and (max-width: 1150px) {
+    .WelcomeMain .welcomeWrapper .LogoDiv {
+        width:426px;
+        height: 213px;
+    }
+
+    .WelcomeMain .welcomeInfo .title {
+        font-size: 40px;
+    }
+
+
+    .WelcomeMain .welcomeInfo .about > p {
+        font-size: 18px;
+    }
+}
+
+
+@media screen and (max-width: 900px) {
+
+    .WelcomeMain .welcomeInfo .about > p {
+        font-size: 15px;
+    }
+}
+
+
+@media screen and (max-width: 850px) {
+    .WelcomeMain {
+        display: none;
+    }
+}
+
+
+@media screen and (max-width: 700px) {
+
+    .WelcomeMain .welcomeInfo .about > p {
+        font-size: 15px;
+    }
+}
