make modal responsive , fix bugs

--- a/src/components/Groups/Group/Group.module.css
+++ b/src/components/Groups/Group/Group.module.css
@@ -48,7 +48,10 @@
 
 
 
-/* Media Query */
+
+/* &----------------------------- Media Queries ----------------------------- */
+
+
 
 @media screen and (max-width: 970px) {
      .singleGroupMain .singleGroupWrapper > .initials {
