--- a/src/components/Groups/GroupsMain.jsx/GroupMain.module.css
+++ b/src/components/Groups/GroupsMain.jsx/GroupMain.module.css
@@ -91,6 +91,11 @@
 
 
 
+
+/* &----------------------------- Media Queries ----------------------------- */
+
+
+
 @media screen and (max-width: 1550px) {
     .GroupsMain {
         flex: 2
