--- a/src/components/MyNotes/MyNotes.module.css
+++ b/src/components/MyNotes/MyNotes.module.css
@@ -168,6 +168,15 @@
 }
 
 
+
+
+
+
+/* &----------------------------- Media Queries ----------------------------- */
+
+
+
+
 @media screen and (max-width: 1000px) { 
     .MyNotesMain .MyNotesWrapper .MyNotesHeader_Footer > textarea::placeholder {
         font-size: 20px;
